--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,20 @@
     </div>
-    <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
-        <div class="container">
-        </div>
-    </nav>
+	<footer class="small">
+		<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+			<div class="container">	
+				<ul class="list-inline">
+					<li class="text-primary">&copy; 2014 <strong>Database Performance</strong>, Ltd.</li>
+					&#124;
+					<li><a href="/site/terms">Terms</a></li>
+					&#124;
+					<li><a href="/site/privacy">Privacy</a></li>
+					&#124;
+					<li><a href="/security">Security</a></li>
+					&#124;
+					<li><a href="/contact">Contact</a></li>
+				</ul>
+			</div>
+		</nav>
+	</footer>
   </body>
 </html>
