--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
-          <a class="brand" href="\">Database Performance Ltd</a>
+          <a class="brand" href="\"><i class="fa fa-long-arrow-up fa-4x"></i><i class="fa fa-chevron-right fa-3x"></i>atabase Performance Ltd</a>
         </div>
     </nav>
     <div class="container">
