--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,16 +9,20 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome by Dave Gandy - http://fontawesome.io -->
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">	
-    <!-- light_wool from http://subtlepatterns.com/.  CC BY-SA 3.0 - Subtle Patterns © Atle Mo. -->
-    <style>body { padding-top: 70px; padding-bottom: 70px;background: url(/img/light_wool.png) repeat 0 0; }</style>
-
+    <link href="./css/custom.css" rel="stylesheet">
   </head>
 
   <body>
-
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-          <a class="brand" href="\"><i class="fa fa-long-arrow-up fa-4x"></i><i class="fa fa-chevron-right fa-3x"></i>atabase Performance Ltd</a>
-        </div>
+   
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">       
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <h3 class="muted">Database Performance</h3>
+      </div>     
     </nav>
+  
     <div class="container">
